# Sayaka_Bot

./: .gitignore  .gitmodules  Makefile  README.md  bot.py  pyproject.toml
src/plugins/ping/: __init__.py
test/: test.py
